--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="set_password">Set Password</string>
     <string name="hide">Hide Preferences</string>
     <string name="password_length">Password Length</string>
+    <string name="account_name">Account Name</string>
+    <string name="decrypt">Decrypt</string>
+    <string name="encrypt">Encrypt</string>
 </resources>
