--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="show_password">Show</string>
     <string name="password_encrypted">Password Encrypted</string>
     <string name="delete">Delete</string>
+    <string name="backup_passwords">Backup Passwords</string>
 </resources>
