--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="backup_passwords">Backup Passwords</string>
     <string name="restore_password">Restore Password</string>
     <string name="refresh_list">Refresh List</string>
+    <string name="encryption_status">Encryption Status</string>
 </resources>
