--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="restore_password">Restore Password</string>
     <string name="refresh_list">Refresh List</string>
     <string name="encryption_status">Encryption Status</string>
+    <string name="search">Search</string>
+    <string name="copy_to_clipboard">Copy</string>
 </resources>
