--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,5 @@
     <string name="disclaimer_message">This app will not recover you passwords when you loose you device.
         You can only recover the passwords on the same device.\n\n
         If you still want to continue please OK button, otherwise press CANCEL.
-        Also keep the app so that you can receive updates when I finally fix this.</string>
+        Also keep the app so that you can receive updates for when I finally fix this.</string>
 </resources>
