--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
         If you still want to continue please OK button, otherwise press CANCEL.
         Also keep the app so that you can receive updates for when I finally fix this.</string>
     <string name="search_title">Search Accounts</string>
+    <string name="generate_qr_code">Generate QR Code</string>
+    <string name="scan_qr">Scan QR Code</string>
 </resources>
