--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="backup_passwords">Backup Passwords</string>
     <string name="restore_password">Restore Password</string>
     <string name="refresh_list">Refresh List</string>
+    <string name="sign_out">Sign Out</string>
     <string name="encryption_status">Encryption Status</string>
     <string name="search">Search</string>
     <string name="copy_to_clipboard">Copy</string>
