--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="generate_qr_code">Generate QR Code</string>
     <string name="scan_qr">Scan QR Code</string>
     <string name="scan_the_qr_code_to_migrate_passwords">Scan the QR code to migrate passwords</string>
+    <string name="unlock_premium">Unlock Premium</string>
 </resources>
