--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Passwords</string>
+    <string name="app_name">Crypt Code</string>
+    <string name="sub_app_name">Password Manager</string>
     <string name="scroll_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
     <string name="settings">Settings</string>
     <string name="add_password">Add Password</string>
@@ -44,4 +45,8 @@
     <string name="scan_qr">Scan QR Code</string>
     <string name="scan_the_qr_code_to_migrate_passwords">Scan the QR code to migrate passwords</string>
     <string name="unlock_premium">Unlock Premium</string>
+    <string name="home">Home</string>
+    <string name="show_passwords">Show Passwords</string>
+    <string name="about">About</string>
+    <string name="crypt_code_logo">Crypt Code Logo</string>
 </resources>
