--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,15 +9,15 @@
     <string name="lock">Lock</string>
     <string name="empty_pass_list">This space is too empty, want to spice it up?</string>
     <string name="alias">Alias</string>
-    <string name="gen_password">Generate New Password</string>
+    <string name="show_preferences">Show Preferences</string>
     <string name="submit">Submit</string>
     <string name="password">Password</string>
     <string name="digitz">Digitz</string>
     <string name="special_characters">Special Characters</string>
     <string name="alphabets">Alphabets</string>
-    <string name="set_password">Set Password</string>
+    <string name="generate_password">Generate Password</string>
     <string name="hide">Hide Preferences</string>
-    <string name="password_length">Password Length</string>
+    <string name="password_length">Length</string>
     <string name="account_name">Account Name</string>
     <string name="decrypt">Decrypt</string>
     <string name="encrypt">Encrypt</string>
@@ -49,4 +49,6 @@
     <string name="show_passwords">Show Passwords</string>
     <string name="about">About</string>
     <string name="crypt_code_logo">Crypt Code Logo</string>
+    <string name="password_icon">Password Icon</string>
+    <string name="learn_more">Learn More</string>
 </resources>
