adds an about pro mode screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,5 @@
     <string name="about">About</string>
     <string name="crypt_code_logo">Crypt Code Logo</string>
     <string name="password_icon">Password Icon</string>
-    <string name="learn_more">Learn More</string>
+    <string name="pro_mode">Buy Me Tea</string>
 </resources>
