creates a library billing implementation

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="pro_mode">Buy Me Tea</string>
+    <string name="pro_mode">Purchase</string>
 </resources>
